wrote js for fixing safari flexbox gap

--- a/omnifood/omnifood.css
+++ b/omnifood/omnifood.css
@@ -985,5 +985,5 @@ strong {
 }*/
 
 .section-hero {
-  margin-top: 9.6rem;
+  padding-top: 9.6rem;
 }
