--- a/omnifood/queries.css
+++ b/omnifood/queries.css
@@ -124,6 +124,8 @@
 
   .main-nav{
     background-color: rgba(255,255,255,0.97);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(5px);
     position:absolute;
     top:0;
     left:0;
@@ -298,3 +300,49 @@
   }
 
 }
+
+
+/* Fixing Safari Flexbox Gap */
+
+.no-flexbox-gap .main-navlist .li:not(:last-child){
+  margin-right:4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child){
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child){
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .main-navlist .li:not(:last-child){
+  margin-right:4.8rem;
+}
+
+.no-flexbox-gap .main-navlist .li:not(:last-child){
+  margin-right:4.8rem;
+}
+
+.no-flexbox-gap .main-navlist .li:not(:last-child){
+  margin-right:4.8rem;
+}
+
+.no-flexbox-gap .main-navlist .li:not(:last-child){
+  margin-right:4.8rem;
+}
+
+.no-flexbox-gap .main-navlist .li:not(:last-child){
+  margin-right:4.8rem;
+}
+
+.no-flexbox-gap .main-navlist .li:not(:last-child){
+  margin-right:4.8rem;
+}
+
+
+
